+ disable optimizeLegibility because Safari has bugs + 1.0 release

--- a/reader.css
+++ b/reader.css
@@ -1,6 +1,6 @@
 body{
 	font-family: "Helvetica Neue", "Helvetica", sans-serif !important;
-	text-rendering: optimizeLegibility;
+/*	text-rendering: optimizeLegibility;*/
 }
 
 /* @group Popover */
